# dailyrentalads

./: README.md  main.py  pyproject.toml  scrapy.cfg
dailyrentalads/: filter.py  items.py  mailing.py  middlewares.py  parsing.py  pipelines.py  settings.py  users.py  utils.py
dailyrentalads/spiders/: rentals.py
tests/: test_ad_parsing.py
tests/html/usedvictoria/no_fields_discard_files/: 224178991437708  ads.js  f(5).txt  f(6).txt  f(7).txt  f(8).txt  f.txt  favourite.js  leaflet.css  sdk(1).js
tests/html/usedvictoria/some_fields_missing_files/: 6727155257317662530  cc.js  f(7).txt  f(8).txt  f(9).txt  f.txt  fcAKwzhlut7.js  jquery.multiselect.min.js  moments.min.js  owl.carousel.min.js  v2cwnaMpH7EIHaG9U_DqFIsIyztz2vYf9Iz6daFFrIf5Y2iq0nQFc2FPKpbptHdz2nVpYeUG-fYDuE7Pw3fRskKYB--xfxAWIOzRFrdQSxrsoIS4vM603iL9K
tests/html/usedvictoria/wanted_files/: 7910561079490386913  css  f(5).txt  f(7).txt  f(8).txt  f(9).txt  f.txt  gwd-dynamic-binders.js  owl.carousel.css  owl.theme.css  scripts_2013.js  sdk.js  skeleton.js
tests/html/usedvictoria/well_formed_files/: 1956708430395976450  4249  4249(1)  728x90.js  dcmads(1).js  dcmads.js  f(2).txt  f(5).txt  f(6).txt  f(7).txt  f(8).txt  gpt.js  main.js  n(1).js  n(2).js  n.js  prebid3.0.0.js  style.css  style_2013.css  usedevent.js  usedmappingOSM.map2.js  v2  v2(1)  v2(2)  verifyc.js  visit.js  wordpress.js
tests/test_ad_parsing/: test_parse_ad.yml
